# redaction

./: SETUP_GUIDE.md  api.py  main.py  pyproject.toml
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/: app.html  app.ts
frontend/src/app/services/: redaction.service.ts
frontend/src/app/webviewer/: webviewer.css  webviewer.html  webviewer.ts
